<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginActivity"
    tools:context=".login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="250dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/secondshopingcart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.654"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:text="@string/korpa2"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/newrounded"
            android:paddingStart="55sp"
            android:paddingTop="5dp"
            android:paddingEnd="55sp"
            android:paddingBottom="5dp"
            android:text="@string/presko_i"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:id="@+id/skipButton"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.444" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prijava"
        android:id="@+id/prijavaText"
        android:textColor="@color/teal_200"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30sp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/slashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/slash"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/prijavaText"
        app:layout_constraintStart_toEndOf="@+id/prijavaText"
        app:layout_constraintTop_toTopOf="@+id/prijavaText" />

    <TextView
        android:id="@+id/registracijaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/registarcija"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/slashText"
        app:layout_constraintStart_toEndOf="@+id/slashText"
        app:layout_constraintTop_toTopOf="@+id/slashText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/emailEditText"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:imeOptions="actionNext"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/editetext_design"
        app:layout_constraintTop_toBottomOf="@+id/registracijaText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:id="@+id/passwordEditText"
        android:layout_marginEnd="30dp"
        android:hint="@string/ifra"
        android:imeOptions="actionDone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/editetext_design"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:inputType="textPassword"
        android:importantForAutofill="no" />


</androidx.constraintlayout.widget.ConstraintLayout>